tests/ui/parser/errors/multiline_error.sol
contract C {
    function f() public pure {
        new string[](3)
     
 

        new string[](4) //~ ERROR: expected one of
    }
}
